--- a/about.html
+++ b/about.html
@@ -23,7 +23,19 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <!--google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;0,800;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/src/style.css" />
+    <!--fontawesome-->
+    <script
+      src="https://kit.fontawesome.com/e39dce2021.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -40,7 +52,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
@@ -55,29 +70,33 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center">About me</h1>
-    <h3 class="text-center">Front-end developer from Hiroshima, Japan</h3>
-    <div class="about-paragraphs text-center">
-      <p>
-        広島大学大学院人間社会科学研究科人文社会科学専攻心理学プログラムの藍です。
-        <br />
-        4年生に九州大学に1年間の交換留学をきっかけ、心理学に興味を持つようになりました。
-        <br />
-        今回プログラミングを勉強しようと思っているのも、実験研究に使える能力を身に着けたいからです。
-        <br />
-        よろしくお願いいたします。
-      </p>
+    <div class="container con-first">
+      <div class="position-relative top-50 start-50 translate-middle">
+        <h1 class="text-center">About me</h1>
+        <h3 class="text-center">Front-end developer from Hiroshima, Japan</h3>
+        <div class="about-paragraphs text-center">
+          <p>
+            広島大学大学院人間社会科学研究科人文社会科学専攻心理学プログラムの藍です。
+            <br />
+            4年生に九州大学に1年間の交換留学をきっかけ、心理学に興味を持つようになりました。
+            <br />
+            今回プログラミングを勉強しようと思っているのも、実験研究に使える能力を身に着けたいからです。
+            <br />
+            よろしくお願いいたします。
+          </p>
+        </div>
+      </div>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/yoga.png" class="img-fluid shadow rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/weather.png" class="img-fluid shadow rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/yogurt.png" class="img-fluid shadow rounded" />
         </div>
       </div>
     </div>
