--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <!--google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;0,800;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/src/style.css" />
+    <!--fontawesome-->
+    <script
+      src="https://kit.fontawesome.com/e39dce2021.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -39,7 +51,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
@@ -56,12 +71,16 @@
         </div>
       </div>
     </nav>
-    <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">Lan</h1>
-    <h3 class="text-center">🇹🇼 Front-end developer, based in Japan</h3>
-    <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+    <div class="container con-first" id="home-me">
+      <div class="position-relative top-50 start-50 translate-middle">
+        <h2 class="text-center">👋 Hi I am</h2>
+        <h1 class="text-center">Lan</h1>
+        <h3 class="text-center">🇹🇼 Front-end developer, based in Japan</h3>
+        <div class="navigation-links mb-5">
+          <a href="about.html#contact" class="primary-link">Contact me</a>
+          <a href="about.html" class="about-link">About me</a>
+        </div>
+      </div>
     </div>
     <div class="container">
       <div class="row">
