--- a/index.html
+++ b/index.html
@@ -71,14 +71,16 @@
         </div>
       </div>
     </nav>
-    <div class="container con-first" id="home-me">
-      <div class="position-relative top-50 start-50 translate-middle">
-        <h2 class="text-center">👋 Hi I am</h2>
-        <h1 class="text-center">Lan</h1>
-        <h3 class="text-center">🇹🇼 Front-end developer, based in Japan</h3>
-        <div class="navigation-links mb-5">
-          <a href="about.html#contact" class="primary-link">Contact me</a>
-          <a href="about.html" class="about-link">About me</a>
+    <div class="container con-first">
+      <div class="hero-image" id="home">
+        <div class="hero-text">
+          <h2 class="text-center">👋 Hi I am</h2>
+          <h1 class="text-center">Lan</h1>
+          <h3 class="text-center">🇹🇼 Front-end developer, based in Japan</h3>
+          <div class="navigation-links mb-5">
+            <a href="about.html#contact" class="primary-link">Contact me</a>
+            <a href="about.html" class="about-link">About me</a>
+          </div>
         </div>
       </div>
     </div>
