--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
       </div>
     </nav>
     <div class="container con-first">
-      <div class="position-relative top-50 start-50 translate-middle">
+      <div class="hero-text">
         <h1 class="text-center">About me</h1>
         <h3 class="text-center">Front-end developer from Hiroshima, Japan</h3>
         <div class="about-paragraphs text-center">
