--- a/about.html
+++ b/about.html
@@ -90,17 +90,17 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid shadow rounded" />
+          <img src="images/yoga.png" class="img-fluid rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid shadow rounded" />
+          <img src="images/weather.png" class="img-fluid rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid shadow rounded" />
+          <img src="images/yogurt.png" class="img-fluid rounded" />
         </div>
       </div>
     </div>
-    <div id="contact" class="mt-5">
+    <div id="contact" class="my-5">
       <h2 class="text-center">📧 Contact me</h2>
       <a href="mailto:b02107006@gmail.com" class="email-link">
         b02107006@gmail.com
