--- a/index.html
+++ b/index.html
@@ -84,55 +84,76 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container mb-5">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
-        </div>
-        <div class="col-md-6">
-          <h2 class="mb-3">Yoga app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
-          </div>
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-md-6">
-          <h2 class="mb-3">Weather app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+          <div class="card mt-5">
+            <img src="images/yoga.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Yoga app</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+                omnis quam vel eos eveniet alias temporibus deserunt veritatis
+                minima fugiat explicabo eum dolore.
+              </p>
+            </div>
+            <div class="card-body" style="height: 5rem; text-align: center">
+              <a href="#" class="primary-link">Launch Yoga App</a>
+            </div>
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <div class="card mt-5">
+            <img src="images/weather.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Weather app</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+                omnis quam vel eos eveniet alias temporibus deserunt veritatis
+                minima fugiat explicabo eum dolore.
+              </p>
+            </div>
+            <div class="card-body" style="height: 5rem; text-align: center">
+              <a href="#" class="primary-link">Launch Weather App</a>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <div class="card mt-5">
+            <img src="images/yoga.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Yoga app</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+                omnis quam vel eos eveniet alias temporibus deserunt veritatis
+                minima fugiat explicabo eum dolore.
+              </p>
+            </div>
+            <div class="card-body" style="height: 5rem; text-align: center">
+              <a href="#" class="primary-link">Launch Yoga App</a>
+            </div>
+          </div>
         </div>
         <div class="col-md-6">
-          <h2 class="mb-3">Yogurt app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yogurt App</a>
+          <div class="card mt-5">
+            <img src="images/yogurt.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Yogurt app</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+                omnis quam vel eos eveniet alias temporibus deserunt veritatis
+                minima fugiat explicabo eum dolore.
+              </p>
+            </div>
+            <div class="card-body" style="height: 5rem; text-align: center">
+              <a href="#" class="primary-link">Launch Weather App</a>
+            </div>
           </div>
         </div>
       </div>
