--- a/index.html
+++ b/index.html
@@ -85,74 +85,83 @@
       </div>
     </div>
     <div class="container mb-5">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="card mt-5">
-            <img src="images/yoga.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Yoga app</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-                omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                minima fugiat explicabo eum dolore.
-              </p>
+      <div class="d-flex justify-content-center">
+        <div class="card mt-5 text-bg-secondary" style="width: 80%">
+          <div class="row g-0">
+            <div class="col-md-5">
+              <img
+                src="images/yoga.png"
+                class="img-fluid rounded"
+                alt="Yoga app"
+              />
             </div>
-            <div class="card-body" style="height: 5rem; text-align: center">
-              <a href="#" class="primary-link">Launch Yoga App</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card mt-5">
-            <img src="images/weather.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Weather app</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-                omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                minima fugiat explicabo eum dolore.
-              </p>
-            </div>
-            <div class="card-body" style="height: 5rem; text-align: center">
-              <a href="#" class="primary-link">Launch Weather App</a>
+            <div class="col-md-7">
+              <div class="card-body">
+                <h5 class="card-title">Yoga app</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Perferendis quia, dignissimos nam ratione veniam quibusdam
+                  porro omnis quam vel eos eveniet alias temporibus deserunt
+                  veritatis minima fugiat explicabo eum dolore.
+                </p>
+              </div>
+              <div class="card-body" style="height: 5rem; text-align: center">
+                <a href="#" class="primary-link">Launch Yoga App</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="card mt-5">
-            <img src="images/yoga.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Yoga app</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-                omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                minima fugiat explicabo eum dolore.
-              </p>
+      <div class="d-flex justify-content-center">
+        <div class="card mt-5 text-bg-secondary" style="width: 80%">
+          <div class="row g-0">
+            <div class="col-md-5">
+              <img
+                src="images/weather.png"
+                class="img-fluid rounded"
+                alt="Weather app"
+              />
             </div>
-            <div class="card-body" style="height: 5rem; text-align: center">
-              <a href="#" class="primary-link">Launch Yoga App</a>
+            <div class="col-md-7">
+              <div class="card-body">
+                <h5 class="card-title">Weather app</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Perferendis quia, dignissimos nam ratione veniam quibusdam
+                  porro omnis quam vel eos eveniet alias temporibus deserunt
+                  veritatis minima fugiat explicabo eum dolore.
+                </p>
+              </div>
+              <div class="card-body" style="height: 5rem; text-align: center">
+                <a href="#" class="primary-link">Launch Weather App</a>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="card mt-5">
-            <img src="images/yogurt.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Yogurt app</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-                omnis quam vel eos eveniet alias temporibus deserunt veritatis
-                minima fugiat explicabo eum dolore.
-              </p>
+      </div>
+      <div class="d-flex justify-content-center">
+        <div class="card mt-5 text-bg-secondary" style="width: 80%">
+          <div class="row g-0">
+            <div class="col-md-5">
+              <img
+                src="images/yogurt.png"
+                class="img-fluid rounded"
+                alt="Yogurt app"
+              />
             </div>
-            <div class="card-body" style="height: 5rem; text-align: center">
-              <a href="#" class="primary-link">Launch Weather App</a>
+            <div class="col-md-7">
+              <div class="card-body">
+                <h5 class="card-title">Yogurt app</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Perferendis quia, dignissimos nam ratione veniam quibusdam
+                  porro omnis quam vel eos eveniet alias temporibus deserunt
+                  veritatis minima fugiat explicabo eum dolore.
+                </p>
+              </div>
+              <div class="card-body" style="height: 5rem; text-align: center">
+                <a href="#" class="primary-link">Launch Yogurt App</a>
+              </div>
             </div>
           </div>
         </div>
