--- a/index.html
+++ b/index.html
@@ -58,14 +58,17 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
+                >HOME</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="project.html">PROJECTS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -74,98 +77,35 @@
     <div class="container con-first">
       <div class="hero-image" id="home">
         <div class="hero-text">
-          <h2 class="text-center">👋 Hi I am</h2>
-          <h1 class="text-center">Lan</h1>
-          <h3 class="text-center">🇹🇼 Front-end developer, based in Japan</h3>
-          <div class="navigation-links mb-5">
-            <a href="about.html#contact" class="primary-link">Contact me</a>
-            <a href="about.html" class="about-link">About me</a>
-          </div>
+          <h1 class="text-start">Y.H. Lan</h1>
+          <h3 class="text-start">🇹🇼 Front-end developer, based in Japan</h3>
         </div>
       </div>
     </div>
-    <div class="container mb-5">
-      <div class="d-flex justify-content-center">
-        <div class="card mt-5 text-bg-secondary" style="width: 80%">
-          <div class="row g-0">
-            <div class="col-md-5">
-              <img
-                src="images/yoga.png"
-                class="img-fluid rounded"
-                alt="Yoga app"
-              />
-            </div>
-            <div class="col-md-7">
-              <div class="card-body">
-                <h5 class="card-title">Yoga app</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Perferendis quia, dignissimos nam ratione veniam quibusdam
-                  porro omnis quam vel eos eveniet alias temporibus deserunt
-                  veritatis minima fugiat explicabo eum dolore.
-                </p>
-              </div>
-              <div class="card-body" style="height: 5rem; text-align: center">
-                <a href="#" class="primary-link">Launch Yoga App</a>
+    <footer>
+      <div class="container con-first">
+        <div class="hero-text d-flex justify-content-center">
+          <div class="card text-bg-secondary bg-transparent" style="width: 80%">
+            <div class="card-body">
+              <h3 class="card-title text-center">Contact Me</h3>
+              <div class="navigation-links mb-5">
+                <a
+                  href="contact.html#message"
+                  class="contact-link text-center"
+                  style="width: 120px"
+                  >MESSAGE</a
+                >
+                <a
+                  href="contact.html#mail"
+                  class="contact-link text-center"
+                  style="width: 120px"
+                  >EMAIL</a
+                >
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center">
-        <div class="card mt-5 text-bg-secondary" style="width: 80%">
-          <div class="row g-0">
-            <div class="col-md-5">
-              <img
-                src="images/weather.png"
-                class="img-fluid rounded"
-                alt="Weather app"
-              />
-            </div>
-            <div class="col-md-7">
-              <div class="card-body">
-                <h5 class="card-title">Weather app</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Perferendis quia, dignissimos nam ratione veniam quibusdam
-                  porro omnis quam vel eos eveniet alias temporibus deserunt
-                  veritatis minima fugiat explicabo eum dolore.
-                </p>
-              </div>
-              <div class="card-body" style="height: 5rem; text-align: center">
-                <a href="#" class="primary-link">Launch Weather App</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="d-flex justify-content-center">
-        <div class="card mt-5 text-bg-secondary" style="width: 80%">
-          <div class="row g-0">
-            <div class="col-md-5">
-              <img
-                src="images/yogurt.png"
-                class="img-fluid rounded"
-                alt="Yogurt app"
-              />
-            </div>
-            <div class="col-md-7">
-              <div class="card-body">
-                <h5 class="card-title">Yogurt app</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Perferendis quia, dignissimos nam ratione veniam quibusdam
-                  porro omnis quam vel eos eveniet alias temporibus deserunt
-                  veritatis minima fugiat explicabo eum dolore.
-                </p>
-              </div>
-              <div class="card-body" style="height: 5rem; text-align: center">
-                <a href="#" class="primary-link">Launch Yogurt App</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    </footer>
   </body>
 </html>
