--- a/contact.html
+++ b/contact.html
@@ -127,5 +127,51 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="container mt-5 mb-5" style="width: 80%">
+        <div class="row g-0">
+          <div class="col-md-6 d-flex justify-content-center">
+            <div
+              class="card text-bg-secondary bg-transparent"
+              style="width: 80%"
+            >
+              <div class="card-body">
+                <h3 class="card-title text-center">Contact Me</h3>
+                <div class="navigation-links mb-5">
+                  <a
+                    href="contact.html#message"
+                    class="contact-link text-center"
+                    style="width: 120px"
+                    >MESSAGE</a
+                  >
+                  <a
+                    href="contact.html#mail"
+                    class="contact-link text-center"
+                    style="width: 120px"
+                    >EMAIL</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex justify-content-center">
+            <div
+              class="card text-bg-secondary bg-transparent"
+              style="width: 80%"
+            >
+              <h3 class="card-title text-center">Follow Me</h3>
+              <div class="navigation-links mb-5">
+                <a href="#" class="sns text-center" style="font-size: 36px"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+                <a href="#" class="sns text-center" style="font-size: 36px"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
