--- a/project.html
+++ b/project.html
@@ -210,6 +210,31 @@
           </div>
         </div>
       </div>
+      <p class="d-flex justify-content-center" style="font-size: 10px">
+        This project was coded by Lan as a practice project for
+        <a
+          href="https://www.shecodes.io/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Shecodes</a
+        >
+        and is open-sourced on
+        <a
+          href="https://github.com/b02107006/front-end-developer"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          GitHub</a
+        >
+        and hosted on
+        <a
+          href="https://celadon-douhua-e4ac04.netlify.app"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Netlify</a
+        >
+      </p>
     </footer>
   </body>
 </html>
