--- a/project.html
+++ b/project.html
@@ -209,32 +209,37 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <p class="d-flex justify-content-center" style="font-size: 10px">
+            This project is coded by Lan as a practice project for
+            <a
+              href="https://www.shecodes.io/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Shecodes</a
+            >
+          </p>
+          <p class="d-flex justify-content-center" style="font-size: 10px">
+            Open-sourced on
+            <a
+              href="https://github.com/b02107006/front-end-developer"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              GitHub</a
+            >
+            and hosted on
+            <a
+              href="https://celadon-douhua-e4ac04.netlify.app"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Netlify</a
+            >
+          </p>
+        </div>
       </div>
-      <p class="d-flex justify-content-center" style="font-size: 10px">
-        This project was coded by Lan as a practice project for
-        <a
-          href="https://www.shecodes.io/"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Shecodes</a
-        >
-        and is open-sourced on
-        <a
-          href="https://github.com/b02107006/front-end-developer"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          GitHub</a
-        >
-        and hosted on
-        <a
-          href="https://celadon-douhua-e4ac04.netlify.app"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Netlify</a
-        >
-      </p>
     </footer>
   </body>
 </html>
